--- a/src/styles/Offer.css
+++ b/src/styles/Offer.css
@@ -34,7 +34,7 @@
   position: relative;
 }
 
-.offerList h2 {
+.offerPageInfo h2 {
   margin-top: 0.6rem;
   text-transform: capitalize;
   color: #282c3f;
