--- a/src/styles/EditProfile.css
+++ b/src/styles/EditProfile.css
@@ -3,6 +3,10 @@
   height: 100vh;
   width: 600px;
   padding: 2rem 3rem;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 521;
 }
 
 .closeIcon {
