--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -51,3 +51,53 @@ nav {
   display: block;
   font-size: 0.8rem;
 }
+
+.popUp {
+  position: absolute;
+  right: 10%;
+  background-color: white;
+  box-shadow: 2px 3px 12px rgba(0, 0, 0, 0.2);
+  top: 100%;
+  width: 300px;
+  height: 250px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top: solid 3px rgb(249, 167, 17);
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+  padding: 2rem 0;
+  padding-top: 1.2rem;
+}
+
+.popUp p {
+  width: 100%;
+  padding: 9px 2rem;
+  text-align: center;
+}
+
+.popUp p a {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  justify-content: center;
+  color: #282c3f;
+}
+
+.popUp p a:hover {
+  color: rgb(249, 167, 17);
+}
+
+.popUp span {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 9pz 2rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.popUp span:hover {
+  color: red;
+}
