--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -28,3 +28,46 @@
   cursor: pointer;
   font-size: 1.2rem;
 }
+
+.searchDataBar {
+  margin-top: 2rem;
+  padding-bottom: 2rem;
+  height: 60vh;
+  overflow-y: scroll;
+}
+
+.searchDataBar::-webkit-scrollbar {
+  display: none;
+  width: 0;
+}
+
+.searchListBar {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+
+.searchListBar img {
+  width: 100%;
+  height: 150px;
+  transition: ease-in-out 0.3s;
+}
+
+.searchPageInfo h2 {
+  font-size: 1rem;
+  margin-top: 0.6rem;
+  text-transform: capitalize;
+  color: #282c3f;
+  white-space: wrap;
+}
+
+.searchEmpty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 4rem;
+}
+
+.searchEmpty img {
+  width: 15rem;
+}
