--- a/src/styles/CartItem.css
+++ b/src/styles/CartItem.css
@@ -125,3 +125,9 @@
 .checkOutButton button:hover {
   background-color: rgb(4, 188, 4);
 }
+
+@media (max-width: 992px) {
+  .cartItemList {
+    grid-template-columns: 1fr 85px 29px;
+  }
+}
