--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -29,3 +29,11 @@
   background-color: #393e46;
   color: white;
 }
+
+@media (max-width: 820px) {
+  .errorCard {
+    width: 100%;
+    height: 300px;
+    padding: 1rem;
+  }
+}
