--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -119,3 +119,63 @@
   font-size: 0.8rem;
   gap: 0.1;
 }
+
+@media (max-width: 1340px) {
+  .hotelFooter {
+    padding: 1rem 2rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .homeFooter {
+    padding: 1.5rem 5rem;
+  }
+}
+
+@media (max-width: 1340px) {
+  .hotelFootDesc {
+    display: none;
+  }
+}
+
+@media (max-width: 820px) {
+  .homeFooter {
+    padding: 1.5rem 2rem;
+  }
+}
+
+@media (max-width: 620px) {
+  .homeFooter {
+    padding: 1.5rem 1rem;
+  }
+
+  .hotelFootCard {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .hotelFooter {
+    padding: 1rem;
+  }
+}
+
+@media (max-width: 520px) {
+  .hideFoot {
+    display: none;
+  }
+
+  .footerCard {
+    justify-content: center;
+  }
+
+  .hotelFootLogo h1 {
+    font-size: 1.3rem;
+  }
+
+  .listed p {
+    font-size: 0.9rem;
+  }
+
+  .listed span {
+    font-size: 0.65rem;
+  }
+}
